new galery button

--- a/app/views/galeries/index.html.erb
+++ b/app/views/galeries/index.html.erb
@@ -5,3 +5,4 @@
   <li><%= galery.id %>-<%= link_to  "#{galery.name}", galery_path(galery) %></li>
 </ul>
 <%end%>
+<%= link_to "New Galery", new_galery_path %>
