--- a/app/views/galeries/new.html.erb
+++ b/app/views/galeries/new.html.erb
@@ -1,5 +1,8 @@
-<%= simple_form_for @galery do |f| %>
-<%= f.input :name %>
-<%= f.input :location %>
-<%= f.submit %>
-<%end%>
+<div class="container">
+
+  <%= simple_form_for @galery do |f| %>
+  <%= f.input :name %>
+  <%= f.input :location %>
+  <%= f.submit class: 'btn btn-primary' %>
+  <%end%>
+</div>
