--- a/app/views/galeries/show.html.erb
+++ b/app/views/galeries/show.html.erb
@@ -2,7 +2,7 @@
     <h3>- Exhibitions -</h3>
     <% @galery.exhibitions.each do |exhibition| %>
     <ul>
-      <li><%= link_to "#{exhibition.name} -> #{exhibition.start_date} to #{exhibition.end_date}", exhibition_path %></li>
+      <li><%= link_to "#{exhibition.name} -> #{exhibition.start_date} to #{exhibition.end_date}", exhibition_path(exhibition) %></li>
     </ul>
     <%end%>
     <%= link_to  "new", new_galery_exhibition_path(@galery) , :class => "btn btn-primary" %>
