css correction and form correction

--- a/app/views/galeries/exhibitions/new.html.erb
+++ b/app/views/galeries/exhibitions/new.html.erb
@@ -2,8 +2,8 @@
 <div class="container">
   <%= simple_form_for(@exhibition, url: galery_exhibitions_path, method: :post) do |f| %>
   <%= f.input :name %>
-  <%= f.input :start_date %>
-  <%= f.input :end_date %>
+  <%= f.input :start_date, as: :date %>
+  <%= f.input :end_date, as: :date %>
   <%= f.submit class: 'btn btn-primary' %>
   <%end%>
 
