--- a/app/views/galeries/exhibitions/new.html.erb
+++ b/app/views/galeries/exhibitions/new.html.erb
@@ -1,6 +1,7 @@
-<h1> NEW EXHIBITION </h1>
 <div class="container">
+
   <%= simple_form_for(@exhibition, url: galery_exhibitions_path, method: :post) do |f| %>
+  <h4> New Exhibition </h4>
   <%= f.input :name %>
   <%= f.input :start_date %>
   <%= f.input :end_date %>
