--- a/app/views/galeries/new.html.erb
+++ b/app/views/galeries/new.html.erb
@@ -1,8 +1,9 @@
 <div class="container">
 
   <%= simple_form_for @galery do |f| %>
+  <h4> New Galery </h4>
   <%= f.input :name %>
   <%= f.input :location %>
-  <%= f.submit class: 'btn btn-primary' %>
+  <%= f.submit class: 'btn btn-primary'%>
   <%end%>
 </div>
