--- a/app/views/galeries/new.html.erb
+++ b/app/views/galeries/new.html.erb
@@ -4,6 +4,7 @@
   <h4> New Galery </h4>
   <%= f.input :name %>
   <%= f.input :location %>
+  <%= f.input :photo, as: :file %>
   <%= f.submit class: 'btn btn-primary'%>
   <%end%>
 </div>
