--- a/app/views/exhibitions/showrooms/new.html.erb
+++ b/app/views/exhibitions/showrooms/new.html.erb
@@ -1,10 +1,10 @@
 <div class="container">
 
-  <% simple_form_for @showroom do |f| %>
+  <%= simple_form_for(@showroom, url: exhibition_showrooms_path , method: :post) do |f| %>
+  <h4> New Showroom </h4>
   <%= f.input :name %>
   <%= f.input :photo%>
   <%= f.submit class: 'btn btn-primary' %>
-  <%= f.cancel class: 'btn btn-primary' %>
   <%end%>
 
 </div>
