showroom controller + new

--- a/app/views/exhibitions/show.html.erb
+++ b/app/views/exhibitions/show.html.erb
@@ -15,5 +15,5 @@
 </div>
 
 
-<%= link_to  "new", new_exhibition_showroom_path(@exhibition) , :class => "btn btn-primary" %>
+<%= link_to  "create showroom", new_exhibition_showroom_path(@exhibition) , :class => "btn btn-primary" %>
 <%= link_to  "delete" , exhibition_path(@exhibition) ,method: :delete, :class => "btn btn-primary" %>
