--- a/app/views/exhibitions/show.html.erb
+++ b/app/views/exhibitions/show.html.erb
@@ -2,15 +2,12 @@
 <h1><%= @exhibition.name %></h1>
 
 <div class="container">
+<div class="container-sm">100% wide until small breakpoint</div>
   <div class="col-md-6 mb-md-2 p-md-4">
     <img src="..." class="w-100" alt="...">
   </div>
   
-    <p>description</p>
 
-    <a href="#" class="stretched-link">to the showrooms click here</a>
-  </div>
-</div>
-
-<%= link_to  "delete" , exhibition_path(@exhibition) ,method: :delete, :class => "btn btn-primary" %>
-
+<%= link_to  "create", exhibition_path(@exhibition), method: :create, :class => "btn btn-primary" %>
+<%= link_to  "delete", exhibition_path(@exhibition), method: :delete, :class => "btn btn-primary" %>
+<%= link_to  "edit", exhibition_path(@exhibition), method: :edit, :class => "btn btn-primary" %>
