changement on model + frontend

--- a/app/assets/stylesheets/pages/_carousel.scss
+++ b/app/assets/stylesheets/pages/_carousel.scss
@@ -7,3 +7,11 @@
   width: 100% !important;
   height: 75vh;
 }
+
+.carousel-control-prev {
+  left: 15%;
+}
+
+.carousel-control-next {
+  left: 70%;
+}
