--- a/app/views/showrooms/art_pieces/new.html.erb
+++ b/app/views/showrooms/art_pieces/new.html.erb
@@ -3,7 +3,9 @@
   <%= simple_form_for(@art_piece, url: showroom_art_pieces_path , method: :post) do |f| %>
   <h4> New Art_Piece </h4>
   <%= f.input :name %>
-  <%= f.input :photo%>
+  <%= f.input :description %>
+  <%= f.input :dimension %>
+  <%= f.input :photo %>
   <%= f.submit class: 'btn btn-primary' %>
   <%end%>
 
