some changement on models

--- a/app/views/exhibitions/show.html.erb
+++ b/app/views/exhibitions/show.html.erb
@@ -75,3 +75,5 @@
 
     </div>
   </div>
+
+  <%= link_to  "create art_pieces", new_exhibition_art_piece_path(@exhibition) , :class => "btn btn-primary" %>
