--- a/app/views/galeries/index.html.erb
+++ b/app/views/galeries/index.html.erb
@@ -12,13 +12,13 @@
     <div class="carousel-inner">
       <% @galeries.each do |galery| %>
       <% if galery.eql?(@galeries.first)%>
-      <div class="carousel-item active">
+       <div class="carousel-item active">
         <%else%>
         <div class="carousel-item">
-          <%end%>
+        <%end%>
           <%= cl_image_tag galery.photo.key, class: "d-block w-100", alt: galery.name %>
-          <div class="carousel-caption d-none d-md-block">
-            <%= link_to  "#{galery.name}", galery_path(galery), {:style=>'color: gray; font-size:150%;'} %>
+          <div class="carousel-caption" style="color: black;">
+            <%= link_to  "#{galery.name}", galery_path(galery), class: "btn btn-light" %>
             <p><%= galery.location%></p>
           </div>
         </div>
