did some changes on gallery, art_piece show

--- a/app/views/exhibitions/art_pieces/new.html.erb
+++ b/app/views/exhibitions/art_pieces/new.html.erb
@@ -6,7 +6,7 @@
   <%= f.input :description %>
   <%= f.input :dimension %>
   <%= f.input :photo %>
-  <%= f.submit class: 'btn btn-primary' %>
+  <%= f.submit class: 'btn btn-light' %>
   <%end%>
 
 </div>
