--- a/app/views/art_pieces/show.html.erb
+++ b/app/views/art_pieces/show.html.erb
@@ -1,3 +1,9 @@
-This is art_pieces show
 
-<%= cl_image_tag @art_piece.photo.key , class: "d-block  mx-auto" %>
+<div class="container">
+  <h1><%= @art_piece.name %> </h1>
+  <%= link_to "Back to #{@art_piece.exhibition.name}", @art_piece.exhibition, class: "btn btn-light" %>
+ <div class="card text-center p-3 mb-2">
+  <%= @art_piece.description %>
+ </div>
+  <%= cl_image_tag @art_piece.photo.key , class: "d-block  mx-auto" %>
+</div>
