--- a/app/views/exhibitions/show.html.erb
+++ b/app/views/exhibitions/show.html.erb
@@ -76,4 +76,4 @@
     </div>
   </div>
 
-  <%= link_to  "create art_pieces", new_exhibition_art_piece_path(@exhibition) , :class => "btn btn-primary" %>
+  <%= link_to  "create art_pieces", new_exhibition_art_piece_path(@exhibition) , :class => "btn btn-light" %>
