--- a/app/views/exhibitions/showrooms/new.html.erb
+++ b/app/views/exhibitions/showrooms/new.html.erb
@@ -6,7 +6,7 @@
   <h4> New Showroom </h4>
   <%= f.input :name %>
   <%= f.input :photo%>
-  <%= f.submit class: 'btn btn-primary' %>
+  <%= f.submit class: 'btn btn-light' %>
   <%end%>
 
 </div>
