new index for art_pieces

--- a/app/views/exhibitions/show.html.erb
+++ b/app/views/exhibitions/show.html.erb
@@ -77,3 +77,4 @@
   </div>
 
   <%= link_to  "create art_pieces", new_exhibition_art_piece_path(@exhibition) , :class => "btn btn-light" %>
+  <%= link_to  "Art Pieces", exhibition_art_pieces_path(@exhibition) , :class => "btn btn-light" %>
