--- a/app/views/exhibitions/show.html.erb
+++ b/app/views/exhibitions/show.html.erb
@@ -30,6 +30,7 @@
     </div>
     <div class="col-12 col-sm-12 col-md-7 col-lg-7">
       <div class="text-center" style="margin-top: 5px;">
+
         <div id="myCarousel" class="carousel slide" data-interval="false">
           <div class="carousel-inner center">
             <% @exhibition.art_pieces.each do |art_piece| %>
@@ -63,12 +64,14 @@
 
 
             </div>
+            <% if @exhibition.art_pieces.first %>
             <a class="carousel-control-prev" href="#myCarousel" data-slide="prev" id="carousel-control-prev-ex">
               <span class="carousel-control-prev-icon" aria-hidden="true"></span>
             </a>
             <a class="carousel-control-next" href="#myCarousel" data-slide="next" id="carousel-control-next-ex">
               <span class="carousel-control-next-icon" aria-hidden="true"></span>
             </a>
+            <%end%>
           </div>
         </div>
 
