--- a/app/views/exhibitions/art_pieces/index.html.erb
+++ b/app/views/exhibitions/art_pieces/index.html.erb
@@ -1,19 +1,25 @@
-<div class="artworks-list">
-  <% @art_pieces.each do |art_piece| %>
-  <div class="single-artwork" data-image="/images/willcotton/artworks/COTTON_Flying_Cowboy_2020_402987.jpg" data-title="Flying Cowboy" data-year="2020" data-uuid="49520678-e6b9-4cef-b25a-8f758f70a122" data-sold="" data-description="[&quot;Oil on linen&quot;,&quot;243,8 x 182,9 cm&quot;,&quot;96 x 72 in.&quot;, &quot;&quot;]">
-    <div class="image-holder exposition">
-      <%= cl_image_tag art_piece.photo.key %>
-      <div class="opener">
-        view
+<div class="container">
+  <div class="card text-center p-3 mb-2">
+    <h1><%= @art_pieces.first.exhibition.name %> </h1>
+    <h6><%= @art_pieces.first.exhibition.start_date %> to <%= @art_pieces.first.exhibition.end_date %></h6>
+  </div>
+
+  <div class="artworks-list">
+    <% @art_pieces.each do |art_piece| %>
+    <div class="single-artwork">
+      <div class="image-holder exposition">
+        <%= cl_image_tag art_piece.photo.key %>
+        <div class="opener">
+          view
+        </div>
+      </div>
+      <div class="info">
+        <p class="title"><%= art_piece.name %></p>
+        <p><%= art_piece.dimension %></p>
+        <p><%= art_piece.description %></p>
       </div>
     </div>
-    <div class="info">
-      <p class="title"><%= art_piece.name %></p>
-      <p><%= art_piece.dimension %></p>
-      <p><%= art_piece.description %></p>
-    </div>
+    <%end%>
   </div>
-  <%end%>
-</div>
 
 </div>
