--- a/app/views/galeries/show.html.erb
+++ b/app/views/galeries/show.html.erb
@@ -1,16 +1,33 @@
-<% content_for :meta_title, @galery.name %>
+  <% content_for :meta_title, @galery.name %>
+  <div class="container">
+    <div class="card text-center p-3 mb-2">
+      <h2><%= @galery.name %> </h2>
+      <h6><%= @galery.location %></h6>
+    </div>
+    <div class="row">
+      <div class="col-12 col-lg-9">
+        <% @galery.exhibitions.each do |exhibition| %>
+        <div class="row">
+          <div class="col-12 col-lg-6">
+            <div class="text-center">
+              <%=link_to( cl_image_tag(exhibition.art_pieces.last.photo.key, class: "img-fluid"), exhibition_path(exhibition) )%>
+            </div>
+            <div class="text-center galerie_templon_work_block_data">
+              <span class="exhibition_artistname exhibition_work_block_data_line_height"><%= exhibition.artist %></span><br>
+              <span class="exhibitions_exhibition_title exhibition_work_block_data_line_height"> <%= exhibition.name %></span><br>
+              <span class="exhibition_date exhibition_work_block_data_line_height"><%= exhibition.start_date %> to <%= exhibition.end_date %></span>
+              <br>
+              <span class="exhibition_date exhibition_work_block_data_line_height"><%=@galery.location%></span>
+              <br>
+              <br>
 
-<div class="container">
-  <h2>Galerie <%= @galery.name %></h2>
 
-  <h3>- Exhibitions -</h3>
-  <ul>
-    <% @galery.exhibitions.each do |exhibition| %>
-    <li class="mb-2"><%= link_to "#{exhibition.name} -> #{exhibition.start_date} to #{exhibition.end_date}", exhibition_path(exhibition), class: "btn btn-light" %></li>
-    <%end%>
-  </ul>
-  <% if current_user == @galery.user %>
-  <%= link_to  "new", new_galery_exhibition_path(@galery) , :class => "btn btn-light" %>
-  <% end %>
-  <%= link_to "back", galeries_path , :class => "btn btn-light" %>
-</div>
+            </div>
+          </div>
+        </div>
+        <%end%>
+        <% if current_user == @galery.user %>
+        <%= link_to  "new", new_galery_exhibition_path(@galery) , :class => "btn btn-light" %>
+        <% end %>
+      </div>
+    </div>
