--- a/app/views/exhibitions/art_pieces/index.html.erb
+++ b/app/views/exhibitions/art_pieces/index.html.erb
@@ -10,7 +10,7 @@
       <div class="image-holder exposition">
         <%= cl_image_tag art_piece.photo.key %>
         <div class="opener">
-          view
+          <%= link_to "view", art_piece_path(art_piece) %>
         </div>
       </div>
       <div class="info">
